--- a/.prettierrc
+++ b/.prettierrc
@@ -1,9 +1,10 @@
 {
-  "semi": false,
-  "singleQuote": true,
-  "singleAttributePerLine": true,
-  "bracketSameLine": true,
-  "endOfLine": "lf",
-  "trailingComma": "none",
-  "arrowParens": "avoid"
+    "tabWidth": 4,
+    "singleQuote": true,
+    "semi": false,
+    "printWidth": 120,
+    "useTabs": false,
+    "endOfLine": "auto",
+    "trailingComma": "none",
+    "arrowParens": "avoid"
 }
