--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
     "format:fix": "prettier --write --ignore-path .gitignore ."
   },
   "dependencies": {
+    "autoprefixer": "^10.4.19",
     "jotai": "^2.8.3",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-hook-form": "^7.52.0",
+    "react-router-dom": "^6.24.0"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
@@ -26,7 +29,9 @@
     "eslint-plugin-react": "^7.34.3",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.7",
+    "postcss-loader": "^8.1.1",
     "prettier": "^3.3.2",
+    "tailwindcss": "^3.4.4",
     "vite": "^5.3.1"
   }
 }
